--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  <link rel="stylesheet" href="Portfolio.css">
  <link rel="icon" href="logo.gif">
  <script src="app.js"></script>
- <title>Mohamed Mahgpub - Web Developer</title>
+ <title>Mohamed Mahgoub - Web Developer</title>
 </head>
 <body>
  <header id="nav-container">
