Add hover effect to nav links

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
  <header id="nav-container">
-  <a id="logo-link" href="http://www.mohamedmahgoub.me"><img id="logo" src="logo.gif" alt="logo"></a>
+  <a id="logo-link" href="index.html"><img id="logo" src="logo.gif" alt="logo"></a>
   <div class="navbar">
    <a href="#skills" class="nav-item">Skills</a>
    <a href="#work" class="nav-item">Work</a>
@@ -103,6 +103,6 @@
   
   <p>Copyright &copy 2022 All Rights Reserved.</p>
  </footer>
- 
+
 </body>
 </html>
