--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
    <h3><em>Front-end web developer</em></h3>
    <a href="#work" id="main-btn">View my work</a>
   </div>
-  <!-- <img id="welcome" src="welcome.svg" alt="welcome"> -->
-  <img id="pp" src="pp.gif" alt="">
+  <img id="welcome" src="undraw_welcoming_re_x0qo.svg" alt="welcome">
+  <!-- <img id="pp" src="pp.gif" alt=""> -->
  </section>
 
  <section id="skills">
