Improve phone formatting

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
     <div id="my-phone" class="social-divs">
      <i id="phone" class="fas fa-phone-alt"></i>
-     <h3>+249116552833</h3>
+     <h3>+249<span>&nbsp</span>11<span>&nbsp</span>655<span>&nbsp</span>2833</h3>
     </div>
     <div id="github" class="social-divs">
      <a href="https://github.com/MohamedMahgoub04" class="social" id="profile-link"><i class="fab fa-github"></i></a>
